<resources>
    <string name="app_name">CompSciLibrary</string>
    <string name="title_text">CompSci Bookclub</string>
    <string name="register_button_text">Register</string>
    <string name="login_button_text">Login</string>
    <string name="register_activity_textView_text">Register</string>
    <string name="login_title_text">Login</string>
    <string name="email_enter_text">Email</string>
    <string name="password_enter_text">Password</string>
    <string name="enter_email_hint">Enter email</string>
    <string name="enter_password_hint">Enter password</string>
    <string name="confirm_password_text_view">Confirm password</string>
    <string name="confirm_password_text_input">confirm password</string>
    <string name="submit_button_register_text">Submit</string>
    <string name="confirm_button_login_text">Confirm</string>
    <string name="compsci_bookclub_tile_text">CompSci BookClub</string>
    <string name="search_for_a_book_text">Search for a book</string>
    <string name="book_icon_text">Book</string>
    <string name="reading_list_text">Reading list</string>
    <string name="account_text">Account</string>
    <string name="log_out_text">log out</string>
    <string name="add_book_text">Add book</string>
    <string name="title_hint">Title</string>
    <string name="author_hint">Author</string>
    <string name="subject_hint">Subject</string>
    <string name="isbn_hint">ISBN</string>
    <string name="submit_add_book_button_text">Submit</string>
    <string name="logo_book">book</string>
    <string name="instructions">Tap a book to view details and reviews</string>
    <string name="library_title_text">Library</string>
    <string name="add_a_book_button_text">add a book</string>
    <string name="library_button_text">Library</string>
    <string name="no_results_found_text">no results found</string>
    <string name="search_button_text">Search</string>
    <string name="enter_a_title_or_subject_hint">Enter a title or subject</string>
    <string name="bookclub_search_title_text">Bookclub Search</string>
    <string name="book_view_title_text">Book View</string>
    <string name="title_book_view_text_view_text">title</string>
    <string name="author_bookview_textview_text">author</string>
    <string name="subject_title_text_bookview">subject</string>
    <string name="leave_a_review_button_text">Leave a review</string>
    <string name="isbn_bookView_titleText">isbn</string>
    <string name="review_text_title">Review</string>
    <string name="enter_your_review_below_and_submit">Enter your review below and submit</string>
    <string name="submit_review_button_text">Submit review</string>
    <string name="review_subtitle_text">Reviews</string>
    <string name="news_title">News</string>
</resources>