<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen">

    <TextView
        android:id="@+id/home_screen_text_view_title"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:fontFamily="@font/alegreya"
        android:text="@string/compsci_bookclub_tile_text"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="42sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <TextView
        android:id="@+id/username_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_screen_text_view_title"
        app:layout_constraintVertical_bias="0.015" />

    <Button
        android:id="@+id/search_book_button"
        android:layout_width="226dp"
        android:layout_height="64dp"
        android:layout_marginTop="44dp"
        android:text="@string/search_for_a_book_text"
        app:backgroundTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_text_view" />

    <Button
        android:id="@+id/Reading_list_button"
        android:layout_width="226dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/reading_list_text"
        app:backgroundTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_book_button" />

    <Button
        android:id="@+id/your_account_button"
        android:layout_width="226dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/account_text"
        app:backgroundTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Reading_list_button" />

    <Button
        android:id="@+id/Logout_button"
        android:layout_width="226dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/log_out_text"
        app:backgroundTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/your_account_button" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="134dp"
        android:layout_height="98dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logout_button"
        app:layout_constraintVertical_bias="0.254"
        app:srcCompat="@drawable/ic_auto_stories_24px"
        android:contentDescription="@string/book_icon_text" />
</androidx.constraintlayout.widget.ConstraintLayout>